src/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node-port0
spec:
  type: NodePort
  ports:
    - name: node-port
      protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30010
  selector:
    app: nginx-dep0
---
apiVersion: v1
kind: Service
metadata:
  name: node-port1
spec:
  type: NodePort
  ports:
    - name: node-port
      protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30011
  selector:
    app: nginx-dep1
---
apiVersion: v1
kind: Service
metadata:
  name: node-port2
spec:
  type: NodePort
  ports:
    - name: node-port
      protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30012
  selector:
    app: nginx-dep2
