src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - path: /path1
        pathType: Prefix
        backend:
          service:
            name: node-port1
            port:
              number: 8080
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: node-port2
            port:
              number: 8080
  defaultBackend:
    service:
      name: node-port0
      port:
        number: 8080
